Phase 6: Module IA Smart Search - LLMService, SmartSearchService, endpoint /api/smart-search, Angular component

--- a/smart-finder-backend/pom.xml
+++ b/smart-finder-backend/pom.xml
@@ -115,6 +115,13 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-mysql</artifactId>
         </dependency>
+        
+        <!-- OpenAI SDK (Phase 6: Module IA) -->
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>service</artifactId>
+            <version>0.18.2</version>
+        </dependency>
     </dependencies>
     
     <build>
