--- a/smart-finder-backend/src/main/resources/application.properties
+++ b/smart-finder-backend/src/main/resources/application.properties
@@ -5,11 +5,12 @@
 # --- SERVER ---
 server.port=8080
 server.servlet.context-path=/api/v1
+server.error.include-message=always
 
 # --- DATABASE (MySQL) ---
 spring.datasource.url=jdbc:mysql://localhost:3306/smartfinder?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=smartfinder
-spring.datasource.password=smartfinder123
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- JPA / HIBERNATE ---
@@ -27,10 +28,12 @@ spring.flyway.baseline-on-migrate=true
 jwt.secret=your-256-bit-secret-key-here-must-be-at-least-32-characters-long
 jwt.expiration=86400000
 
-# --- LLM API (OpenAI) ---
-openai.api.key=${OPENAI_API_KEY:}
-openai.api.url=https://api.openai.com/v1/chat/completions
-openai.model=gpt-4o-mini
+# --- LLM API (DeepSeek) ---
+openai.api.key=sk-ce46582aa543411599439472954281ee
+openai.api.url=https://api.deepseek.com/v1/chat/completions
+openai.model=deepseek-chat
+openai.base-url=https://api.deepseek.com
+
 
 # --- LOGGING ---
 logging.level.com.smartfinder=DEBUG
@@ -40,3 +43,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # --- CORS ---
 cors.allowed-origins=http://localhost:4200,https://smart-finder.vercel.app
+
+# --- FILE LOGGING ---
+logging.file.name=target/spring.log
