--- a/smart-finder-backend/src/main/resources/application.properties
+++ b/smart-finder-backend/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.clean-on-validation-error=true
 
 # --- JWT ---
 jwt.secret=your-256-bit-secret-key-here-must-be-at-least-32-characters-long
@@ -46,3 +47,8 @@ cors.allowed-origins=http://localhost:4200,https://smart-finder.vercel.app
 
 # --- FILE LOGGING ---
 logging.file.name=target/spring.log
+
+# --- CLOUDINARY (Images) ---
+cloudinary.cloud_name=dplhiqosv
+cloudinary.api_key=784828794119549
+cloudinary.api_secret=y7CiEOcO4EJGnoVFJ9XmgjXMk4w
