--- a/smart-finder-backend/pom.xml
+++ b/smart-finder-backend/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>service</artifactId>
             <version>0.18.2</version>
         </dependency>
+        <!-- Cloudinary (Image Uploads) -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.36.0</version>
+        </dependency>
     </dependencies>
     
     <build>
