--- a/smart-finder-backend/src/main/resources/application.properties
+++ b/smart-finder-backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.error.include-message=always
 # --- DATABASE (MySQL) ---
 spring.datasource.url=jdbc:mysql://localhost:3306/smartfinder?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=${DB_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- JPA / HIBERNATE ---
@@ -26,11 +26,11 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.clean-on-validation-error=true
 
 # --- JWT ---
-jwt.secret=your-256-bit-secret-key-here-must-be-at-least-32-characters-long
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # --- LLM API (DeepSeek) ---
-openai.api.key=sk-ce46582aa543411599439472954281ee
+openai.api.key=${OPENAI_API_KEY}
 openai.api.url=https://api.deepseek.com/v1/chat/completions
 openai.model=deepseek-chat
 openai.base-url=https://api.deepseek.com
@@ -49,6 +49,6 @@ cors.allowed-origins=http://localhost:4200,https://smart-finder.vercel.app
 logging.file.name=target/spring.log
 
 # --- CLOUDINARY (Images) ---
-cloudinary.cloud_name=dplhiqosv
-cloudinary.api_key=784828794119549
-cloudinary.api_secret=y7CiEOcO4EJGnoVFJ9XmgjXMk4w
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
