--- a/smart-finder-backend/pom.xml
+++ b/smart-finder-backend/pom.xml
@@ -128,6 +128,13 @@
             <artifactId>cloudinary-http44</artifactId>
             <version>1.36.0</version>
         </dependency>
+        
+        <!-- Dotenv for loading .env files -->
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
     
     <build>
